# Prescience

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: bytetrack_low_conf.yaml  default.yaml
scripts/: README.md  auto_label_test.py  bootstrap_label.py  count_webcam.py  demo_mvp.sh  draw_line.py  extract_frames.py  fake_tracking.py  fake_tracking_with_count.py  show_webcam.py
scripts/labeled_llm/: manifest.json  needs_review.json
scripts/labeled_llm/labels/: 000133.txt  000141.txt  000257.txt  000258.txt  000259.txt  000422.txt  000477.txt  000478.txt  000982.txt  001022.txt  001030.txt  001038.txt  001096.txt  001104.txt  001117.txt  001118.txt  001141.txt  001149.txt
src/prescience/: README.md  __init__.py  cli.py  config.py  types.py
src/prescience/cloud/: README.md  __init__.py  app.py  db.py  jobs.py  routes.py  schemas.py  store.py  stream.py
src/prescience/datasets/: README.md  __init__.py  bootstrap_label.py  manifest.py  yolo.py
src/prescience/events/: README.md  __init__.py  emitter.py  schemas.py
src/prescience/ingest/: README.md  video_to_frames.py
src/prescience/pipeline/: README.md  calibrate_zone.py  count_stream.py  count_video.py  demo.py  enroll.py  tracking_session.py  web_onboarding.py  zone_count.py
src/prescience/profiles/: README.md  io.py  schema.py
static/: onboarding.js  tracking.js  ui.css  ui.js  zone.js
tests/: test_cloud.py  test_cloud_ui.py  test_counting.py  test_enroll.py  test_events.py  test_jobs.py  test_profiles.py  test_sse.py  test_tracking_ui.py  test_training.py  test_web_onboarding.py
(+14 files in other folders)
